--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "populate": "node ./server/db/seeds"
+    "populate": "node ./server/db/seeds",
+    "server-dev": "nodemon server/index.js"
   },
   "dependencies": {
     "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
