--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "populate": "node ./server/db/seeds",
     "server-dev": "nodemon server/index.js",
-    "react-dev": "webpack -w"
+    "react-dev": "webpack -w",
+    "test": "jest"
   },
   "dependencies": {
     "bluebird": "^3.7.2",
@@ -34,6 +35,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "jest": "^25.1.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   },
