--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "populate": "node ./server/db/seeds",
     "server-dev": "nodemon server/index.js",
     "react-dev": "webpack -w",
-    "test": "jest"
+    "test": "jest",
+    "seed": "node ./server/db/seeds"
   },
   "dependencies": {
     "bluebird": "^3.7.2",
@@ -27,7 +28,10 @@
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
+    "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
@@ -36,6 +40,8 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "jest": "^25.1.0",
+    "jest-environment-enzyme": "^7.1.2",
+    "jest-enzyme": "^7.1.2",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   },
