--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "seed": "node ./server/db/seeds"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "font-awesome": "^4.7.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
     "react": "^16.13.0",
@@ -28,6 +32,7 @@
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
