--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
     "react": "^16.13.0",
